--- a/Css/style.css
+++ b/Css/style.css
@@ -195,6 +195,10 @@ transform: scale(1.05) perspective(1px);
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #111927;
+    background-image: 
+        radial-gradient(at 47% 33%, hsl(162.00, 77%, 40%) 0, transparent 59%), 
+        radial-gradient(at 82% 65%, hsl(218.00, 39%, 11%) 0, transparent 55%);
 }
 
 .cta {
@@ -205,10 +209,15 @@ transform: scale(1.05) perspective(1px);
     margin-top: 100px;
     margin-bottom: 100px;
     padding: 30px;
-    background-image:linear-gradient(rgb(31, 46, 56), rgb(9, 15, 26));
+    /* background-image:linear-gradient(rgb(31, 46, 56), rgb(9, 15, 26)); */
     border-radius:15px ;
     opacity: 0.95;
     width: 35%;
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(17, 25, 40, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 
